# entropy-driven-SSE

./: .gitignore  README.md  pyproject.toml
data/structures/: lpscl-ii.cif
eSSE/: Clusters.py  DiscreteTraj.py  SSEMarkov.py  SuperVor.py  __init__.py  analysis.py
examples/: preprocess.py
