[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eSSE"
version = "0.1.0"
description = "Path Entropy-driven design of solid-state electrolytes"
requires-python = "==3.10.16"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.15.2",
    "matplotlib==3.10.1",
    "plotly==6.0.0",
    "seaborn==0.13.2",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "kneed==0.8.5",
    "mdtraj==1.10.3",
    "pymatgen==2025.1.9",
    "pyxtal==1.0.6",
    "pyvoro==1.3.2",
    "deeptime==0.4.4",
    "ipykernel==6.29.5",
    "nbformat==5.10.4",
    "tables==3.10.1",
]

[tool.setuptools.packages.find]
include = ["eSSE*"]
